fixed editor error

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TrackChanges</title>
+  <title>Track Changes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="https://c.cksource.com/a/1/logos/ckeditor5.png">
 </head>
 <body>
   <app-root></app-root>
